--- a/src/Feed.css
+++ b/src/Feed.css
@@ -5,6 +5,11 @@
     overflow-y: scroll;
 }
 
+/* Hide scrollbar */
+.feed::-webkit-scrollbar {
+    display: none
+}
+
 .feed__header {
     position: sticky;
     top: 0;
@@ -12,4 +17,9 @@
     z-index: 100;
     border: 1px solid var(--twitter-background);
     padding: 15px 20px;
+}
+
+.feed__header > h2 {
+    font-size: 20px;
+    font-weight: 800;
 }
